--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,11 @@ set(PROJECT_NAME OpenGL_Course)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# 환경 변수 추가
+set(WINDOW_NAME "Hello, OpenGL!")
+set(WINDOW_WIDTH 960)
+set(WINDOW_HEIGHT 540)
+
 project(${PROJECT_NAME})
 add_executable(${PROJECT_NAME} src/main.cpp)
 
@@ -13,6 +18,12 @@ include(Dependency.cmake)
 target_include_directories(${PROJECT_NAME} PUBLIC ${DEP_INCLUDE_DIR})
 target_link_directories(${PROJECT_NAME} PUBLIC ${DEP_LIB_DIR})
 target_link_libraries(${PROJECT_NAME} PUBLIC ${DEP_LIBS})
+
+target_compile_definitions(${PROJECT_NAME} PUBLIC
+  WINDOW_NAME="${WINDOW_NAME}"
+  WINDOW_WIDTH=${WINDOW_WIDTH}
+  WINDOW_HEIGHT=${WINDOW_HEIGHT}
+)
 
 # Dependency들이 먼저 build 될 수 있게 관계 설정
 add_dependencies(${PROJECT_NAME} ${DEP_LIST})
